# reef

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  ca.amorim.reef.yaml
.github/workflows/: build.yml  linux.yml  windows.yml
cmake/modules/: FindLibGit2.cmake  FindLibgit2.cmake  FindUTF8PROC.cmake
data/: ca.amorim.reef.appdata.xml  ca.amorim.reef.desktop
debian/: changelog  clean  control  copyright  gbp.conf  rules
include/: block_allocator.h  chtype_buf_utilities.h  commit_list.h  commit_model.h  cpp_curses.h  cpp_git.h  error.h  graph.h  graph_delegate.h  main_window.h  preferences.h  reef_string.h  ref_map.h  repository_controller.h  scroll_window.h  text_scroll_area.h  version.h  window_base.h  window_commit.h  window_help.h  window_main.h
resources/: reef.rc
snap/: snapcraft.yaml
src/: CMakeLists.txt  about_window.cpp  commit_list.cpp  commit_model.cpp  graph.cpp  graph_delegate.cpp  main.cpp  main_window.cpp  main_window.ui  reef_string.cpp  ref_map.cpp  repository_controller.cpp  text_scroll_area.cpp  window_commit.cpp  window_help.cpp  window_main.cpp
src/compat/: CMakeLists.txt  cpp_git.h
src/controller/: CMakeLists.txt  repository_controller.cpp  repository_controller.h
src/core/: CMakeLists.txt  commit_list.cpp  commit_list.h  graph.h  ref_map.cpp  ref_map.h
src/test/: CMakeLists.txt  test_graph.cpp
src/ui/: CMakeLists.txt  about_window.cpp  about_window.h  about_window.ui  deselectable_list_view.cpp  deselectable_list_view.h  dock_widget_title_bar.cpp  dock_widget_title_bar.h  graph_delegate.cpp  graph_delegate.h  main_window.cpp  main_window.h  main_window.ui
src/util/: CMakeLists.txt  block_allocator.h  error.h  preferences.h  reef_string.h  version.h
test/: curses_test.h  main.cpp  test_graph.cpp
translation/: reef_en_CA.ts
